# dll-hijack

./: CMakeLists.txt  README.md  appveyor.bat  appveyor.yml  build.sh  cryptsp.c  cryptsp.def  cryptsp.h  gen_code.sh  hijack.h  iphlpapi.c  iphlpapi.def  iphlpapi.h  msimg32.c  msimg32.def  msimg32.h  native_api.h  version.c  version.def  version.h  version_test.c  winhttp.c  winhttp.def  winhttp.h  winmm.c  winmm.def  winmm.h  winsta.c  winsta.def  winsta.h  wtsapi32.c  wtsapi32.def  wtsapi32.h
